Better JVM options for fine-tuning the GC.
http://www.powerbot.org/community/topic/754743-ram-leaks/